# allure-testops-mcp-python

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  QUICK_TEST.md  README.md  TESTING.md  allure_client.py  index.py  pyproject.toml  test_mcp.py  test_simple.py
controllers/: access_group_controller.py  business_metric_controller.py  category_controller.py  category_matcher_controller.py  cleanup_controller.py  comment_controller.py  custom_field_controller.py  custom_field_project_controller.py  custom_field_schema_controller.py  custom_field_value_bulk_controller.py  custom_field_value_controller.py  dashboard_controller.py  dashboard_template_controller.py  defect_controller.py  export_controller.py  filter_controller.py  global_settings_controller.py  integration_controller.py  launch_controller.py  launch_diff_controller.py  launch_issue_controller.py  launch_search_controller.py  launch_tag_controller.py  launch_upload_controller.py  member_controller.py  project_access_controller.py  project_category_controller.py  project_collaborator_controller.py  project_controller.py  project_metric_controller.py  project_property_controller.py  project_settings_controller.py  test_case_attachment_controller.py  test_case_audit_controller.py  test_case_bulk_controller.py  test_case_clone_controller.py  test_case_controller.py  test_case_csv_import_controller.py  test_case_custom_field_controller.py  test_case_export_controller.py  (+16 more)
