[tool.poetry]
name = "allure-testops-mcp-python"
version = "0.1.0"
description = "Model Context Protocol server for Allure TestOps API"
authors = ["Alexander Shurov <alexander.shurov@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mcp = ">=1.0.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
